[package]
name = "redctrl"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
glib = "^0"
gio = "^0"
gdk = "^0"
gtk = "^0"
cairo-rs = { version = "^0", features = ["png"] }

[features]
default = ["gtk_3_10"]
gtk_3_10 = ["gtk/v3_10"]
# gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
# gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
# gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
# gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools